--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -40,10 +40,10 @@
 
 .login .form {
   position: absolute;
-  top: 15%;
+  top: 12.5%;
   left: 35%;
   width: 30%;
-  height: 70%;
+  height: 75%;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
 }
@@ -51,10 +51,10 @@
 /* Signup */
 .signup .form {
   position: absolute;
-  top: 5%;
+  top: 2.5%;
   left: 35%;
   width: 30%;
-  height: 90%;
+  height: 95%;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 10px;
 }
@@ -131,6 +131,7 @@
 
 /* Homepage */
 .homepage {
+  position: relative;
   height: 300vh;
   background: var(--body-color);
   transition: var(--tran-04);
@@ -240,6 +241,7 @@ header .image-text .header-text {
   border-radius: 50%;
   color: var(--sidebar-color);
   font-size: 22px;
+  z-index: 1000;
 }
 
 .sidebar .menu {
@@ -376,8 +378,8 @@ header .image-text .header-text {
 
 /* Content */
 .content {
-  position: relative;
-  height: 100vh;
+  position: absolute;
+  height: 100%;
   left: 250px;
   width: calc(100% - 250px);
 }
@@ -413,90 +415,61 @@ header .image-text .header-text {
   width: 100%;
 }
 
-/* Home */
-.home-content {
+/* Site */
+.content .main-content {
   position: absolute;
-  height: 100%;
+  top: 60px;
   width: 100%;
 }
 
-.home-content .list-bars {
-  list-style: none;
-  position: absolute;
-  top: 15%;
-  left: 5%;
-  height: 90%;
-  width: 90%;
+/* Home */
+.main-content .parts {
+  display: flex;
+  flex-direction: column;
+  margin: 0 32px;
+  margin-top: 16px;
 }
 
-.list-bars .bar-item {
-  position: relative;
-  margin-top: 48px;
+.items-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 350px;
+  margin-bottom: 32px;
 }
 
-.list-bars .bar-item:first-child {
-  margin-top: 0;
-}
-
-/* Item Title */
-.list-bars .bar-item .item-title {
+.items-box .box-title {
   display: flex;
   justify-content: space-between;
 }
 
-.bar-item .item-title .show-link {
-  text-decoration: none;
-}
-
-.bar-item .item-title .show-link:hover {
-  text-decoration: underline;
-}
-
-/* Main content item */
-.list-bars .bar-item .bar-item-slide {
-  position: absolute;
+.items-box .box-body {
   display: flex;
-  justify-content: space-evenly;
-  bottom: 0;
+}
+
+.card {
+  width: 25%;
+  height: 300px;
+  background-color: red;
+  border-radius: 6px;
+  padding: 8px;
+  margin: 0 8px;
+  float: left;
+}
+
+.card .card-img {
   width: 100%;
-  height: 85%;
-  list-style: none;
+  border-radius: 6px;
 }
 
-.bar-item .bar-item-slide .item-chirdren {
-  width: calc(100% / 4);
-  margin-left: 16px;
-  padding: 16px;
-  border-radius: 10px;
-  background-color: var(--text--color);
-  cursor: pointer;
+.card .card-body .name {
+  margin: 8px 0;
 }
 
-.bar-item .bar-item-slide .item-chirdren:first-child {
-  margin-left: 0;
+.card .card-body .desc {
+  margin: 8px 0;
 }
 
-.bar-item .bar-item-slide .item-chirdren:hover {
-  background-color: rgba(112, 112, 112, 0.8);
-}
-
-.homepage.dark .bar-item .bar-item-slide .item-chirdren:hover {
-  background-color: rgba(204, 204, 204, 0.8);
-}
-
-.bar-item-slide .item-chirdren .child-img {
-  width: 100%;
-  height: 70%;
-  border-radius: 10px;
-  background-color: var(--body-color);
-}
-
-.bar-item-slide .item-chirdren .child-body {
-  margin-top: 8px;
-  word-wrap: break-word;
-  color: var(--chid-body-text-color);
-}
 
 
 
