--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -512,11 +512,11 @@ header .image-text .header-text {
   overflow: hidden;
 }
 
-.playlists .title,
+.my-playlists .title,
 .artist .title {
   display: flex;
   align-items: center;
-  width: 100%;
+  width: 99%;
   margin-left: 8px;
   height: 120px;
   padding: 32px;
@@ -542,8 +542,8 @@ header .image-text .header-text {
   height: 80%;
 }
 
-/* Playlists */
-.playlists .title i {
+/* my-playlists */
+.my-playlists .title i {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -555,11 +555,227 @@ header .image-text .header-text {
   color: var(--infor-bar-color);
 }
 
-.playlists .title a {
+.my-playlists .title a {
   text-decoration: none;
 }
 
-.playlists .title a:hover {
+.my-playlists .title a:hover {
   opacity: 0.8;
 }
+
+.my-playlists .items {
+  margin: 16px 32px;
+}
+
+.my-playlists .items p {
+  text-align: center;
+}
+
+.my-playlists .items .playlist {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 70%;
+  height: 60px;
+  margin: 16px 0;
+  padding: 0 16px;
+  border-radius: 6px;
+  background-color: var(--text--color);
+  color: var(--chid-body-text-color);
+}
+
+/* .my-playlists .items .playlist:hover {
+  background-color: rgba(112, 112, 112, 0.8);
+}
+
+.homepage.dark .my-playlists .items .playlist:hover {
+  background-color: rgba(204, 204, 204, 0.8);
+} */
+
+.my-playlists .items .playlist .number {
+  width: 10%;
+}
+
+.my-playlists .items .playlist .playlist-title {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.my-playlists .items .playlist-title a {
+  text-decoration: none;
+  color: var(--chid-body-text-color);
+}
+
+.my-playlists .items .playlist-title a:hover {
+  text-decoration: underline;
+}
+
+.my-playlists .items .playlist .option button {
+  border: none;
+  width: 60px;
+  height: 24px;
+  margin-left: 8px;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #ddd;
+}
+
+.homepage.dark .my-playlists .items .playlist .option button {
+  background-color: rgba(112, 112, 112, 0.8);
+}
+
+.my-playlists .items .playlist .option button:hover {
+  opacity: 0.8;
+}
+
+/* Song Display Page */
+.displayPage {
+  background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
+  height: 100%;
+}
+
+.homepage.dark .displayPage {
+  background-image: linear-gradient(to bottom, #434343 0%, black 100%);
+}
+
+.displayPage .heading {
+  display: flex;
+  align-items: center;
+  height: 300px;
+  background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+}
+
+.displayPage .heading .image {
+  width: 200px;
+  height: 200px;
+  background-color: #fff;
+  margin-left: 32px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.displayPage .heading .image img {
+  width: 100%;
+}
+
+.displayPage .heading h1 {
+  margin-left: 64px;
+  font-size: 64px;
+  color: #fff;
+}
+
+.displayPage .body {
+  padding: 0 32px;
+}
+
+.displayPage .body .tool-bar {
+  display: flex;
+  align-items: center;
+  height: 86px;
+}
+
+.displayPage .body .tool-bar .play {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60px;
+  height: 60px;
+  font-size: 32px;
+  background-color: #0ae157;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.displayPage .body .tool-bar .play:hover {
+  opacity: 0.8;
+}
+
+.displayPage .body .tool-bar .like {
+  margin-left: 32px;
+  font-size: 46px;
+  color: #3a3b3c;
+  cursor: pointer;
+}
+
+.displayPage .body .tool-bar .like:hover {
+  opacity: 0.8;
+}
+
+.homepage.dark .displayPage .body .tool-bar .like {
+  color: #c2c4c6;
+}
+
+.homepage.dark .displayPage .body .tool-bar .like:hover {
+  color: #fff;
+}
+
+.displayPage .body .list .search-box {
+  margin-top: 16px;
+  width: 30%;
+}
+
+.displayPage .body .list .table {
+  position: absolute;
+  margin-top: 84px;
+  width: 90%;
+  border-collapse: collapse;
+  color: #434343;
+}
+
+.homepage.dark .displayPage .body .list .table {
+  color: #ddd;
+}
+
+.displayPage .body .list .table thead th {
+  border-bottom: 2px solid #434343;
+}
+
+.displayPage .body .list .table thead th i {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.displayPage .body .list .table tbody::before {
+  height: 16px;
+  display: table-row;
+  content: '';
+}
+
+.displayPage .body .list .table tbody tr {
+  height: 64px;
+  cursor: pointer;
+}
+
+.displayPage .body .list .table tbody tr:hover {
+  background-color: #e4e9f7;
+}
+
+.homepage.dark .displayPage .body .list .table tbody tr:hover {
+  background-color: #3a3b3c;
+}
+
+/* Library */
+.content .navigate {
+  display: flex;
+}
+
+.content .navigate a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 16px;
+  text-decoration: none;
+  color: var(--chid-body-text-color);
+  min-width: 120px;
+  height: 30px;
+  background-color: #ddd;
+  border-radius: 20px;
+}
+
+.content .navigate a:hover {
+  opacity: 0.8;
+}
+
+
+
 
