--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -710,7 +710,7 @@ header .image-text .header-text {
 
 .displayPage .body .tool-bar .like {
   margin-left: 32px;
-  font-size: 46px;
+  font-size: 36px;
   color: #3a3b3c;
   cursor: pointer;
 }
@@ -839,6 +839,26 @@ header .image-text .header-text {
 
 .displayPage .body .list .table tbody tr:hover {
   background-color: #e4e9f7;
+}
+
+.body .list .table tbody .song-info {
+  display: flex;
+  align-items: center;
+}
+
+.body .list .table tbody .song-info p {
+  margin-left: 8px;
+}
+
+.body .list .table tbody .song-info .song-img {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+}
+
+.body .list .table tbody .song-info .song-img img {
+  width: 100%;
+  height: 100%;
 }
 
 .homepage.dark .displayPage .body .list .table tbody tr:hover {
