--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-
+/* nguuuuuu */
 :root {
   /* Colors */
   --body-color: #E4E9F7;
