--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -31,31 +31,31 @@
   position: relative;
   width: 100%;    
   height: 100vh;
-  background-image: url('/public/img/bg_au.jpg');
+  background-image: url('/public/img/bg_2.jpg');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size:cover;
   overflow: hidden;
 }
 
 .login .form {
   position: absolute;
-  top: 12.5%;
-  left: 35%;
-  width: 30%;
-  height: 75%;
-  background-color: rgba(255, 255, 255, 0.9);
+  top: 5%;
+  left: 60%;
+  width: 38%;
+  height: 90%;
+  background-color: rgba(255, 255, 255, 1);
   border-radius: 10px;
 }
 
 /* Signup */
 .signup .form {
   position: absolute;
-  top: 2.5%;
-  left: 35%;
-  width: 30%;
-  height: 95%;
-  background-color: rgba(255, 255, 255, 0.9);
+  top: 5%;
+  left: 60%;
+  width: 40%;
+  height: 85%;
+   background-color: rgba(255, 255, 255, 0.9); 
   border-radius: 10px;
 }
 
