--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1019,3 +1019,36 @@ header .image-text .header-text {
  h4 {
 	color: #e4335c;
 }
+/* ArboutUs */
+.aboutus {
+  overflow: hidden;
+}
+.aboutus .title {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-left: 8px;
+  height: 120px;
+  padding: 32px;
+  border-bottom: 2px solid var(--text--color);
+  font-size: 24px;
+}
+
+.aboutus .body {
+  margin-top: 32px;
+  margin-left: 16px;
+}
+
+.aboutus .body .card {
+  width: 22%;
+  height: 260px;
+}
+
+.aboutus .body .card .name {
+  font-size: 14px;
+  text-align: center;
+}
+
+.aboutus .body img {
+  height: 80%;
+}
