--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -833,7 +833,8 @@ header .image-text .header-text {
   box-sizing: border-box;
 	z-index: 6;
   position: fixed;
-  display: none;
+  opacity: 0;
+	transform: scale(0);
 }
 
 #bottom-click:target{
@@ -924,9 +925,7 @@ header .image-text .header-text {
 	cursor: pointer;
 }
 .controls>div:hover{
-	
-  border:1px solid lightgrey;
-	border-radius: 50%;
+	font-size: 400%;
 }
 
 /*---Slider for the song--- */
