--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -710,7 +710,7 @@ header .image-text .header-text {
 
 .displayPage .body .tool-bar .like {
   margin-left: 32px;
-  font-size: 46px;
+  font-size: 36px;
   color: #3a3b3c;
   cursor: pointer;
 }
@@ -738,7 +738,7 @@ header .image-text .header-text {
 }
 
 .displayPage .body .list .search-result {
-  width: 45%;
+  width: 60%;
   min-height: 60px;
   max-height: 160px;
   margin-top: 2px;
@@ -748,6 +748,56 @@ header .image-text .header-text {
   border-top-left-radius: 0;
   display: none;
   animation: appear 0.3s ease 1 normal;
+}
+
+.homepage.dark .displayPage .body .list .search-result {
+  background-color: #707070;  
+}
+
+.body .list .search-result .song-result {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.body .list .search-result .song-result:hover {
+  background-color: #a7a3a2;
+}
+
+.list .search-result .song-result .song-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.list .search-result .error {
+  text-align: center;
+  line-height: 60px;
+  color:rgba(204, 204, 204, 0.8);
+}
+
+.song-result .song-info .song-img {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+}
+
+.song-result .song-info .song-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.song-result .song-info .song-desc {
+  margin-left: 16px;
+}
+
+.song-result button {
+  border: none;
+  width: 70px;
+  height: 35px;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 @keyframes appear {
@@ -789,6 +839,26 @@ header .image-text .header-text {
 
 .displayPage .body .list .table tbody tr:hover {
   background-color: #e4e9f7;
+}
+
+.body .list .table tbody .song-info {
+  display: flex;
+  align-items: center;
+}
+
+.body .list .table tbody .song-info p {
+  margin-left: 8px;
+}
+
+.body .list .table tbody .song-info .song-img {
+  width: 50px;
+  height: 50px;
+  background-color: red;
+}
+
+.body .list .table tbody .song-info .song-img img {
+  width: 100%;
+  height: 100%;
 }
 
 .homepage.dark .displayPage .body .list .table tbody tr:hover {
@@ -896,7 +966,6 @@ header .image-text .header-text {
 
 /*---------2.Player Controls------------------*/
 .player {
-	
   width: 30%;
 	display: flex;
 	flex-direction: column;
@@ -1016,6 +1085,7 @@ header .image-text .header-text {
 	vertical-align: middle;
 	display: inline-block;
 }
- h4 {
+
+h4 {
 	color: #e4335c;
 }
