--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -41,32 +41,37 @@
   position: relative;
   width: 100%;    
   height: 100vh;
-  background-image: url('/public/img/bg_2.jpg');
+  background-image: url('/public/img/bg_3.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size:cover;
   overflow: hidden;
+  
 }
 
 .login .form {
   position: absolute;
   top: 5%;
-  left: 60%;
-  width: 38%;
+  left: 65%;
+  width: 33%;
   height: 90%;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 10px;
+  border: 5px solid #e4335c;
+
 }
 
 /* Signup */
 .signup .form {
   position: absolute;
   top: 5%;
-  left: 60%;
-  width: 40%;
-  height: 85%;
+  left: 65%;
+  width: 33%;
+  height: 90%;
    background-color: rgba(255, 255, 255, 0.9); 
   border-radius: 10px;
+  border: 5px solid #e4335c;
+
 }
 
 /* Both used */
@@ -75,7 +80,7 @@
 }
 
 .form .form-header {
-  margin-top: 32px;
+  margin-top: 16px;
   font-size: 36px;
   font-weight: bold;
   
@@ -89,12 +94,12 @@
 }
 
 .form-body {
-  margin-top: 48px;
+  margin-top: -10px;
   padding: 0 24px;
 }
 
 .form-body label {
-  margin-top: 32px;
+  margin-top: 16px;
   display: block;
 
 }
@@ -920,12 +925,12 @@ header .image-text .header-text {
   font-size: 150%;
 }
 /*----Making curosr pointer---*/
-.controls>div{
-
+.controls>i{
 	cursor: pointer;
 }
-.controls>div:hover{
-	font-size: 400%;
+.controls>i:hover{
+  border:1px solid  #ec7171;
+	border-radius: 50%;
 }
 
 /*---Slider for the song--- */
@@ -1017,37 +1022,4 @@ header .image-text .header-text {
 }
  h4 {
 	color: #e4335c;
-}
-/* ArboutUs */
-.aboutus {
-  overflow: hidden;
-}
-.aboutus .title {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  margin-left: 8px;
-  height: 120px;
-  padding: 32px;
-  border-bottom: 2px solid var(--text--color);
-  font-size: 24px;
-}
-
-.aboutus .body {
-  margin-top: 32px;
-  margin-left: 16px;
-}
-
-.aboutus .body .card {
-  width: 22%;
-  height: 260px;
-}
-
-.aboutus .body .card .name {
-  font-size: 14px;
-  text-align: center;
-}
-
-.aboutus .body img {
-  height: 80%;
 }
