--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -652,12 +652,14 @@ header .image-text .header-text {
 }
 
 /* Song Display Page */
+.playlistPage,
 .artistPage,
 .displayPage {
   background-image: linear-gradient(45deg, #93a5cf 0%, #e4efe9 100%);
   height: 100%;
 }
 
+.homepage.dark .playlistPage,
 .homepage.dark .artistPage,
 .homepage.dark .displayPage {
   background-image: linear-gradient(to bottom, #434343 0%, black 100%);
@@ -1164,6 +1166,12 @@ h4 {
   background-blend-mode: soft-light,screen;
 }
 
-/* Playlists Page */
+/* Playlist Page */
+.playlistPage {
+  background-image: linear-gradient(to top, #cd9cf2 0%, #f6f3ff 100%);
+}
 
+.playlistPage .heading {
+  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+}
 
