--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -812,6 +812,7 @@ header .image-text .header-text {
 
 .song-result .song-info .song-desc {
   margin-left: 16px;
+  font-size: 10px;
 }
 
 .song-result button {
