--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -45,7 +45,7 @@ html {
   position: relative;
   width: 100%;    
   height: 100vh;
-  background-image: url('/public/img/bg_3.jpg');
+  background-image: url('/public/img/bg-img.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size:cover;
@@ -56,7 +56,7 @@ html {
 .login .form {
   position: absolute;
   top: 5%;
-  left: 65%;
+  left: 33%;
   width: 33%;
   height: 90%;
   background-color: rgba(255, 255, 255, 1);
@@ -64,6 +64,7 @@ html {
   border: 5px solid #e4335c;
 
 }
+
 
 /* Signup */
 .signup .form {
@@ -87,7 +88,7 @@ html {
   margin-top: 16px;
   font-size: 36px;
   font-weight: bold;
-  
+  margin-right: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -100,6 +101,7 @@ html {
 .form-body {
   margin-top: -10px;
   padding: 0 24px;
+  font-weight: 700;
 }
 
 .form-body label {
@@ -144,6 +146,9 @@ html {
 
 .form-body p a:hover {
   text-decoration: underline;
+}
+.login .form-body{
+  margin-top: 60px;
 }
 
 /* End Authentication */
