--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1157,6 +1157,10 @@ h4 {
   height: 250px;
 }
 
+.content .info-form .body p {
+  font-size: 10px;
+}
+
 .content .info-form .body .avatar {
   position: absolute;
   top: 0;
