--- a/client/src/css/search.module.css
+++ b/client/src/css/search.module.css
@@ -1,2 +1,98 @@
 @import './App.css';
 
+.song_res::-webkit-scrollbar-track,
+.album_res::-webkit-scrollbar-track,
+.artist_res::-webkit-scrollbar-track
+{
+	background-color: transparent;
+}
+
+.song_res::-webkit-scrollbar,
+.album_res::-webkit-scrollbar,
+.artist_res::-webkit-scrollbar
+{
+	width: 10px;
+    height: 8px;
+	background-color: transparent;
+}
+
+.song_res::-webkit-scrollbar-thumb,
+.album_res::-webkit-scrollbar-thumb,
+.artist_res::-webkit-scrollbar-thumb
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #eb8b34;
+}
+
+.search {
+    padding: 32px;
+    color: #faebd7;
+}
+
+.search .res_title {
+    color: #faebd7;
+}
+
+.search > h2 {
+    font-size: 28px;
+}
+
+.recommend_song {
+    margin-top: 32px;
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+}
+
+.search_err {
+    text-align: center;
+}
+
+.song_res,
+.album_res,
+.artist_res {
+    margin-top: 32px;
+    padding: 16px;
+    width: 70%;
+    height: 330px;
+    background: rgba(0,0,0,0.2);
+    box-shadow: 0 0 10px rgba(0,0,0,0.87);
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    gap: 16px;
+}
+
+.song_res {
+    height: 540px;
+}
+
+.top_board {
+    padding: 16px;
+    top: 76px;
+    right: 16px;
+    position: fixed;
+    width: 24%;
+    height: 500px;
+    background: rgba(0,0,0,0.2);
+    box-shadow: 0 0 10px rgba(0,0,0,0.87);
+    border-radius: 5px;
+}
+
+.top_board h2 {
+    text-align: center;
+}
+
+.top_board .line {
+    margin-top: 8px;
+    width: 100%;
+    height: 2px;
+    background-color: #faebd7;
+}
+
+.top_board .top_song {
+    margin-top: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
