--- a/client/src/css/songbox.module.css
+++ b/client/src/css/songbox.module.css
@@ -1,6 +1,7 @@
 @import './App.css';
 
 .song_box {
+    position: relative;
     padding: 8px;
     width: 100%;
     height: 80px;
@@ -30,6 +31,9 @@
 }
   
 .play_btn {
+    position: absolute;
+    top: 16px;
+    right: 8px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
